# claude-terminal

./: Cargo.toml  README.md
src/: app.rs  input_utils.rs  main.rs
src/bash/: executor.rs  mod.rs
src/claude/: mod.rs  parser.rs  parser_tests.rs  process.rs  types.rs
src/sessions/: manager.rs  mod.rs
src/ui/: conversation.rs  input.rs  layout.rs  mod.rs  status.rs  styles.rs
src/voice/: mod.rs  recorder.rs  whisper.rs
